# simulation-farm

./: develop.nix  filter.sh  flake.nix  lib.nix  packages.nix
apps/: default.nix
benchmarks/: hie.yaml
benchmarks/logging/: logging.cabal
benchmarks/logging/src/: Logging.hs
benchmarks/parBlas/: parBlas.cabal
benchmarks/parBlas/app/: blasCallTest.hs  blasFFIComp.hs  composeLayersBlas.hs  composeWithTanhBlas.hs
benchmarks/parBlas/src/: MyBlas.hs
benchmarks/parConduit/: fourmolu.yaml  parConduit.cabal
benchmarks/parConduit/app/: compute.hs  ffi.hs
benchmarks/parConduit/src/ParConduit/: Computation.hs  Parallelizer.hs
benchmarks/parConduit/src/ParConduit/C/: fun.c  slow.c
benchmarks/parFFI/: parFFI.cabal
benchmarks/parFFI/app/: composeLayersFFI.hs  composeWithTanhFFI.hs  ewmTest.hs  largeMatFFI.hs  vecMatMultTest.hs
benchmarks/parFFI/src/: MyFFI.hs
benchmarks/parHmatrix/: parHmatrix.cabal
benchmarks/parHmatrix/app/: composeHmatrix.hs
benchmarks/vecmat/: vecmat.cabal
benchmarks/vecmat/app/: mapTest.hs  splitTest.hs
benchmarks/vecmat/src/: VecMat.hs
experiments/: default.nix  parConduit.nix
lib/: Experiment.nix  Host.nix  Measurement.nix  MultiPlot.nix  Plot.nix  Register.nix  Sink.nix  TilePlot.nix  extensible-experiments.nix  utils.nix
overlays/: blas-overlay.nix  haskell-overlay.nix
