cabal-version:         2.4
name:                  parBlas
version:               0.1.0.0


common deps
  build-depends:       base
                     , parallel
                     , time
                     , deepseq
                     , mtl
                     , vecmat
                     , logging
                     , parFFI

  default-language:    Haskell2010
  ghc-options:         -O2
                       -eventlog
                       -Weverything
                       -Wno-all-missed-specialisations
                       -Wno-implicit-prelude
                       -Wno-missed-specialisations
                       -Wno-safe
                       -Wno-unsafe
                       -Wno-unused-packages
                       -Wno-missing-import-lists
                       -Wno-missing-export-lists
                       -Wno-missing-local-signatures
                       -Wno-monomorphism-restriction
                       -Wno-missing-deriving-strategies
                       -Wno-missing-kind-signatures

  -- other-modules:       Paths_parallelization
  if impl(ghc >= 8.10)
    ghc-options:       -Wno-prepositive-qualified-module
                       -Wno-missing-safe-haskell-mode


library
  import:          deps
  hs-source-dirs:  src
  extra-libraries:
    mycblas
  exposed-modules:
    MyBlas
  other-modules:


executable blasCallTest
  import:              deps
  hs-source-dirs:      app
  main-is:             blasCallTest.hs
  build-depends:       parBlas
  ghc-options:         -O2
                       -threaded
                       -feager-blackholing

executable composeLayersBlas
  import:              deps
  hs-source-dirs:      app
  main-is:             composeLayersBlas.hs
  build-depends:       parBlas
  ghc-options:         -O2
                       -threaded
                       -feager-blackholing
                       -rtsopts

executable blasFFIComp
  import:              deps
  hs-source-dirs:      app
  main-is:             blasFFIComp.hs
  build-depends:       parBlas
  ghc-options:         -O2
                       -threaded
                       -feager-blackholing
                       -rtsopts

executable composeWithTanhBlas
  import:              deps
  hs-source-dirs:      app
  main-is:             composeWithTanhBlas.hs
  build-depends:       parBlas
  ghc-options:         -O2
                       -threaded
                       -feager-blackholing
                       -rtsopts
