cabal-version:         2.4
name:                  vecmat
version:               0.1.0.0


common deps
  build-depends:       base
                     , deepseq

  default-language:    Haskell2010
  ghc-options:         -O2
                       -eventlog
                       -Weverything
                       -Wno-all-missed-specialisations
                       -Wno-implicit-prelude
                       -Wno-missed-specialisations
                       -Wno-safe
                       -Wno-unsafe
                       -Wno-unused-packages
                       -Wno-missing-import-lists
                       -Wno-missing-export-lists
                       -Wno-missing-local-signatures
                       -Wno-monomorphism-restriction
                       -Wno-missing-deriving-strategies
                       -Wno-missing-kind-signatures

  -- other-modules:       Paths_parallelization
  if impl(ghc >= 8.10)
    ghc-options:       -Wno-prepositive-qualified-module
                       -Wno-missing-safe-haskell-mode


library
  import:          deps
  hs-source-dirs:  src
  extra-libraries:
    ffi_c
    mycblas
  exposed-modules:
    VecMat
  other-modules:

executable splitTest
  import:              deps
  hs-source-dirs:      app
  main-is:             splitTest.hs
  build-depends:       vecmat
  ghc-options:         -O2

executable mapTest
  import:              deps
  hs-source-dirs:      app
  main-is:             mapTest.hs
  build-depends:       vecmat
  ghc-options:         -O2
